# UCLA-robomagellan-2011

./: .gitignore  Instructions.txt  main.cpp  stack.xml  waypoints.yaml
glados/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml  manifest.xml~
glados-launch/: camera.launch  glados.launch  gps.launch  threed.launch
glados/msg/: MotorControllerStatus.msg  MotorControllerStatusStamped.msg  MotorStatus.msg  MotorStatusStamped.msg  cone_ahoy.msg  odometry.msg  wheelspeed.msg
glados/src/: MotorNode.cpp  add_two_ints_client.cpp  add_two_ints_server.cpp  cone_rgb.cpp  conversions.h  glados_node.cpp  goal_controller.py  listener.cpp  motor.cpp  motor_BAK.cpp  navigation.cpp  stateEstimator.cpp  talker.cpp  test_motor.cpp  utm_server.cpp  waypoints.yaml
glados/src/glados/msg/: __init__.py  _odometry.py  _stateEstimation.py  _testMotorMsg.py
glados/srv/: LLtoUTM.srv  UTMtoLL.srv
glados_matlab/: Variance.m  motor_variance_unloaded.csv
glados_sensors/: CMakeLists.txt  manifest.xml
glados_sensors/compass/arduino_cmps03/: arduino_cmps03.ino
glados_sensors/compass/arduino_cmps03/glados_imu/: glados_imu.ino
glados_sensors/msg/: imu.msg
glados_sensors/proto/: pcloud.pb.h  pcloud.proto
glados_sensors/src/: cam_cone_find.py  gps_to_xy.py  gpsd_client.py  pc_proc.cpp  test.py
glados_sensors/src/arduino_src/arduino_cmps03/: arduino_cmps03.ino
glados_sensors/src/arduino_src/arduino_cmps03_2/: arduino_cmps03_2.ino
launch/: glados.launch
libax3500/: .cproject  .project  CMakeLists.txt  Makefile  README.markdown  mainpage.dox  manifest.xml  manifest.xml~  rosdep.yaml
libax3500/include/: AX3500.h
libax3500/src/: AX3500.cpp  AX3500.cpp~  main.cpp
libax3500/test/: AX3500_test.cpp~
motor/: CMakeCache.txt  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
motor/src/: .gitignore  glados_node.cpp  motor.cpp
motor/src/motor/msg/: __init__.py  (+2 more)
sensors/: manifest.xml
sensors/gps/: gpsd_client.py
(+8 files in other folders)
